# weechat-relay-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: basic_types.rs  commands.rs  lib.rs  message_parser.rs  messages.rs
test/: expected.txt  test.sh  test.ws
