[package]
name = "weechat-relay-rs"
description = "A library for interfacing with the WeeChat Relay protocol"
repository = "https://github.com/jtracey/weechat-relay-rs"
version = "0.2.0"
authors = ["Justin Tracey"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
atty = { version = "0.2", optional = true }
clap = { version = "4.4", features = ["derive"], optional = true }
nom = "8.0"

[features]
cli = ["atty", "clap"]

[[bin]]
name = "weechat-relay-cli"
required-features = ["cli"]
